// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Home Page A11y I can see the skip to content link 1`] = `"إذهب الى المحتوى"`;

exports[`AMP Home Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Home Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Home Page Ads should have the following properties 1`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="320x50,300x50"
  data-multi-size-validation="false"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="50"
  json="{"targeting":{"slot":"leaderboard","asset_type":"index","channel":"arabic"}}"
  media="(max-width: 62.9375rem)"
  type="doubleclick"
  width="320"
/>
`;

exports[`AMP Home Page Ads should have the following properties 2`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="970x250,728x90"
  data-multi-size-validation="false"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="250"
  json="{"targeting":{"slot":"leaderboard","asset_type":"index","channel":"arabic"}}"
  media="(min-width: 63rem)"
  type="doubleclick"
  width="970"
/>
`;

exports[`AMP Home Page Ads should have the following properties 3`] = `
<amp-ad
  data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
  data-amp-slot-index="0"
  data-block-on-consent="default"
  data-multi-size="300x250"
  data-multi-size-validation="false"
  data-npa-on-unknown-consent="true"
  data-slot="/4817/bbccom.test.site.amp.news"
  height="250"
  json="{"targeting":{"slot":"mpu","asset_type":"index","channel":"arabic"}}"
  type="doubleclick"
  width="300"
/>
`;

exports[`AMP Home Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=5&p=arabic.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Atipo%3Atopic%3Acx35pee6zvpt]&x2=[amp]&x3=[news-arabic]&x4=[ar]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[index-home]&x8=[simorgh]&x9=[BBC%2520News%2520%D8%B9%D8%B1%D8%A8%D9%8A]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Home Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "home",
    "domain": "test.bbc.co.uk",
    "sections": "Arabic, Arabic - home",
    "title": "BBC News عربي",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, عربي",
  "url": "/arabic",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "لماذا يمكنك الاعتماد على أخبار بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-49283069",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "شروط الاستخدام",
  "url": "https://www.bbc.com/arabic/institutional-37731351",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "عن بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731352",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "سياسة الخصوصية",
  "url": "https://www.bbc.com/arabic/institutional-37731353",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "ملفات الارتباط Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "اتصل بـ بي بي سي",
  "url": "https://www.bbc.co.uk/arabic/send/u50853203",
}
`;

exports[`AMP Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "سياستنا بخصوص الروابط الخارجية.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Home Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/arabic"`;

exports[`AMP Home Page Footer Paragraphs should match text 1`] = `"© 2024 بي بي سي. بي بي سي ليست مسؤولة عن محتوى المواقع الخارجية. سياستنا بخصوص الروابط الخارجية."`;

exports[`AMP Home Page Header I can see the branding 1`] = `"BBC News, عربي"`;

exports[`AMP Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "الصفحة الحالية, رئيسية",
  "url": "/arabic",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "أخبار",
  "url": "/arabic/topics/cv2xyrnr8dnt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "اقتصاد",
  "url": "/arabic/topics/cqywj97d487t",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "صحة وعلوم",
  "url": "/arabic/topics/clmj3d7282gt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "رياضة",
  "url": "/arabic/topics/cyx5kw7g1j2t",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 6`] = `
{
  "text": "فيديو",
  "url": "/arabic/topics/cz9mm6r1q5et",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 7`] = `
{
  "text": "تحقيقات",
  "url": "/arabic/topics/c51nnzdeg9zt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 8`] = `
{
  "text": "بودكاست",
  "url": "/arabic/topics/cljddp5lw0dt",
}
`;

exports[`AMP Home Page Header Navigation link should match text and url 9`] = `
{
  "text": "برامجنا",
  "url": "/arabic/topics/crgyknwdlwnt",
}
`;

exports[`AMP Home Page Main heading should match text 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`AMP Home Page Page content First item in the first curation is the correct headline 1`] = `"مرأة الخارقة ""`;

exports[`AMP Home Page Page content First item in the first curation is the correct image 1`] = `
<amp-img
  alt="الرياضه"
  class="bbc-image"
  fallback=""
  layout="fill"
  src="https://ichef.test.bbci.co.uk/ace/standard/240/cpsdevpb/36C4/test/_63702041_tv000117434.jpg"
/>
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-72x72.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-96x96.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-128x128.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-144x144.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-152x152.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-180x180.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-384x384.png",
}
`;

exports[`AMP Home Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-512x512.png",
}
`;

exports[`AMP Home Page SEO Canonical link 1`] = `"http://localhost:7080/arabic"`;

exports[`AMP Home Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Home Page SEO Heading level 1 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`AMP Home Page SEO Lang attribute 1`] = `"ar"`;

exports[`AMP Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "BBC News عربي",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ar",
        "name": "Arabic",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/arabic",
        "@type": "WebPage",
        "name": "BBC News عربي",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "publishingPrinciples": "https://www.bbc.com/arabic/institutional-49283069",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
      "url": "http://localhost:7080/arabic",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/arabic/tv-and-radio-23233470",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/arabic/23231121",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/arabic/tv-and-radio-23233465",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/swahili/23231091",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/arabic/trending-23083197",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/arabic/business-23083189",
        },
      ],
      "name": "BBC News عربي",
      "numberOfItems": 6,
    },
  ],
}
`;

exports[`AMP Home Page SEO OG description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`AMP Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`AMP Home Page SEO OG image alt 1`] = `"BBC News عربي"`;

exports[`AMP Home Page SEO OG locale 1`] = `"ar"`;

exports[`AMP Home Page SEO OG site name 1`] = `"BBC News عربي"`;

exports[`AMP Home Page SEO OG title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Home Page SEO OG type 1`] = `"website"`;

exports[`AMP Home Page SEO OG url 1`] = `"http://localhost:7080/arabic"`;

exports[`AMP Home Page SEO Page title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Home Page SEO Twitter creator 1`] = `"@BBCArabic"`;

exports[`AMP Home Page SEO Twitter description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`AMP Home Page SEO Twitter image alt 1`] = `"BBC News عربي"`;

exports[`AMP Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`AMP Home Page SEO Twitter site 1`] = `"@BBCArabic"`;

exports[`AMP Home Page SEO Twitter title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Home Page Timestamp should match text and date 1`] = `
{
  "date": "2019-03-13",
  "text": "13 مارس/ آذار 2019",
}
`;
